[package]
name = "tui_scan_network"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
crossterm = "0.29.0"
network-interface = "2.0.5"
ratatui = "0.30.0"
openssl = { version = "0.10", features = ["vendored"] }
snmp2 = { version = "0.4.14", features = ["v3"] }
tokio = { version = "1.50.0", features = ["full"] }
